compiler/testData/diagnostics/tests/duplicateJvmSignature/functionAndProperty/classObject.kt
class C {
    class object {
        <!CONFLICTING_PLATFORM_DECLARATIONS!>val x = 1<!>
        <!CONFLICTING_PLATFORM_DECLARATIONS!>fun getX() = 1<!>
    }
}